--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "script.js",
   "scripts": {
         "install": "cd GOL && npm i",
-        "start": "cd GOL && npm start"
+        "start": "cd GOL && npm server.js"
   },
   "author": "",
   "license": "ISC",
